data-driven tests should be fixed

--- a/VVSZadaceTest/VVSZadaceTests.csproj
+++ b/VVSZadaceTest/VVSZadaceTests.csproj
@@ -1,9 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+    <TargetFramework>net5.0</TargetFramework>
 
     <IsPackable>false</IsPackable>
   </PropertyGroup>
@@ -16,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\VVSZadaca1\VVSZadaca1.csproj" />
+    <ProjectReference Include="..\VVSZadace\VVSZadace.csproj" />
   </ItemGroup>
 
 </Project>
