--- a/VVSZadaceTest/VVSZadaceTests.csproj
+++ b/VVSZadaceTest/VVSZadaceTests.csproj
@@ -22,6 +22,9 @@
     <None Update="Glasaci.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Kandidati.csv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="TajneSifre.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
