--- a/VVSZadaceTest/VVSZadaceTests.csproj
+++ b/VVSZadaceTest/VVSZadaceTests.csproj
@@ -1,10 +1,14 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
 
     <IsPackable>false</IsPackable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Compile Include="C:\Users\masno\Desktop\MuhamedFaks\V semestar\Verifikacija i validacija softvera\Zadaca2MuhamedMasnopita18700.cs" Link="Zadaca2MuhamedMasnopita18700.cs" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="CsvHelper" Version="30.0.1" />
